@@ -537,16 +537,16 @@ extern sym_link *validateLink (sym_link * l,
                                          x->select.s.noun == V_BBITFIELD || \
                                          x->select.s.noun == V_BIT       || \
                                          x->select.s.noun == V_SBIT ))
-#define IS_BITFIELD(x)   (IS_SPEC(x) && (x->select.s.noun == V_BITFIELD || \
+#define IS_BITFIELD(x)   (IS_SPEC(x) && (x->select.s.noun == V_BITFIELD  || \
                                          x->select.s.noun == V_BBITFIELD ))
-#define IS_BITVAR(x)     (IS_SPEC(x) && (x->select.s.noun == V_BITFIELD || \
+#define IS_BITVAR(x)     (IS_SPEC(x) && (x->select.s.noun == V_BITFIELD  || \
                                          x->select.s.noun == V_BBITFIELD || \
-                                         x->select.s.noun == V_BIT || \
+                                         x->select.s.noun == V_BIT       || \
                                          x->select.s.noun == V_SBIT ))
-#define IS_BIT(x)        (IS_SPEC(x) && (x->select.s.noun  == V_BIT ||   \
+#define IS_BIT(x)        (IS_SPEC(x) && (x->select.s.noun == V_BIT       || \
                                          x->select.s.noun == V_SBIT ))
-#define IS_BOOLEAN(x)    (IS_SPEC(x) && (x->select.s.noun  == V_BIT ||   \
-                                         x->select.s.noun == V_SBIT ||   \
+#define IS_BOOLEAN(x)    (IS_SPEC(x) && (x->select.s.noun == V_BIT       || \
+                                         x->select.s.noun == V_SBIT      || \
                                          x->select.s.noun == V_BBITFIELD || \
                                          x->select.s.noun == V_BOOL ))
 #define IS_FLOAT(x)      (IS_SPEC(x) && x->select.s.noun == V_FLOAT)
@@ -620,7 +620,7 @@ extern sym_link *fixed16x16Type;
 typedef enum
 {
   RESULT_TYPE_NONE = 0,         /* operands will be promoted to int */
-  RESULT_TYPE_BIT,
+  RESULT_TYPE_BOOL,
   RESULT_TYPE_CHAR,
   RESULT_TYPE_INT,
   RESULT_TYPE_OTHER,            /* operands will be promoted to int */
